timeline viewing edits, lengths for duration and cooldowns of mits no longer overflow timeline

--- a/css/style.css
+++ b/css/style.css
@@ -96,7 +96,7 @@ div {
     /* border: none; */
     width: var(--timeslot-width);
     /* height: var(--icon-size); */
-    overflow-x: hidden;
+    /* overflow-x: hidden; */
 }
 #table {
     /* margin-left: -30px; */
